@@ -171,60 +171,60 @@ LEGAL_VALUES = {
         'sr_latin': 'sr_Latn',
     },
     'RTL_LANGUAGES': ('ar', 'fa', 'he', 'ur'),
-    'MOMENTJS_LOCALES': dict(
-        af='af',
-        ar='ar',
-        az='az',
-        bg='bg',
-        bn='bn',
-        bs='bs',
-        ca='ca',
-        cs='cs',
-        cz='cs',
-        da='da',
-        de='de',
-        el='el',
-        en='en',
-        eo='eo',
-        es='es',
-        et='et',
-        eu='eu',
-        fa='fa',
-        fi='fi',
-        fr='fr',
-        gl='gl',
-        hi='hi',
-        he='he',
-        hr='hr',
-        hu='hu',
-        id='id',
-        it='it',
-        ja='ja',
-        ko='ko',
-        lt='lt',
-        ml='ml',
-        nb='nb',
-        nl='nl',
-        pa='pa-in',
-        pl='pl',
-        pt='pt',
-        pt_br='pt-br',
-        ru='ru',
-        sk='sk',
-        sl='sl',
-        sq='sq',
-        sr='sr-cyrl',
-        sr_latin='sr',
-        sv='sv',
-        te='te',
-        tr='tr',
-        th='th',
-        uk='uk',
-        ur='ur',
-        vi='vi',
-        zh_cn='zh-cn',
-        zh_tw='zh-tw'
-    ),
+    'MOMENTJS_LOCALES': {
+        'af': 'af',
+        'ar': 'ar',
+        'az': 'az',
+        'bg': 'bg',
+        'bn': 'bn',
+        'bs': 'bs',
+        'ca': 'ca',
+        'cs': 'cs',
+        'cz': 'cs',
+        'da': 'da',
+        'de': 'de',
+        'el': 'el',
+        'en': 'en',
+        'eo': 'eo',
+        'es': 'es',
+        'et': 'et',
+        'eu': 'eu',
+        'fa': 'fa',
+        'fi': 'fi',
+        'fr': 'fr',
+        'gl': 'gl',
+        'hi': 'hi',
+        'he': 'he',
+        'hr': 'hr',
+        'hu': 'hu',
+        'id': 'id',
+        'it': 'it',
+        'ja': 'ja',
+        'ko': 'ko',
+        'lt': 'lt',
+        'ml': 'ml',
+        'nb': 'nb',
+        'nl': 'nl',
+        'pa': 'pa-in',
+        'pl': 'pl',
+        'pt': 'pt',
+        'pt_br': 'pt-br',
+        'ru': 'ru',
+        'sk': 'sk',
+        'sl': 'sl',
+        'sq': 'sq',
+        'sr': 'sr-cyrl',
+        'sr_latin': 'sr',
+        'sv': 'sv',
+        'te': 'te',
+        'tr': 'tr',
+        'th': 'th',
+        'uk': 'uk',
+        'ur': 'ur',
+        'vi': 'vi',
+        'zh_cn': 'zh-cn',
+        'zh_tw': 'zh-tw'
+    },
     'PYPHEN_LOCALES': {
         'af': 'af',
         'bg': 'bg',
@@ -1168,7 +1168,7 @@ class Nikola(object):
         self._GLOBAL_CONTEXT['date_fanciness'] = self.config.get('DATE_FANCINESS')
         self._GLOBAL_CONTEXT['js_date_format'] = self.config.get('JS_DATE_FORMAT')
         self._GLOBAL_CONTEXT['momentjs_locales'] = LEGAL_VALUES['MOMENTJS_LOCALES']
-        # Patch missing locales into momentjs defaulting to english (Issue #3216)
+        # Patch missing locales into momentjs defaulting to English (Issue #3216)
         for l in self._GLOBAL_CONTEXT['translations']:
             if l not in self._GLOBAL_CONTEXT['momentjs_locales']:
                 self._GLOBAL_CONTEXT['momentjs_locales'][l] = ""
